--- a/web.html
+++ b/web.html
@@ -7,6 +7,9 @@
             <h1>
                 Hello Welcome to my new Website!
             </h1>
+            <h2>
+                I recommend you to take Git & Github courses later
+            </h2>
         </div>
     </body>
 </html>
